# client

./: CMakeLists.txt  client.sln
client/: client.cpp  client.vcxproj
